--- a/formatting/index.css
+++ b/formatting/index.css
@@ -33,12 +33,13 @@ body { margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; }
     padding: 80px 70px;
     top: 0;
     left: 0;
+    z-index: 2;
     transition: all 0.3s;
     display: flex;
     align-items: center;
-    background-color: #fff;
-    box-shadow: 2px 2px 2px solid #000;
-    /* border: 1px solid #000; */
+    background-color: #f7f7f7;
+    /* box-shadow: 2px 2px 2px solid #000; */
+    border-bottom: 1px solid #e4e4e4;
 }
 
 .web_wrapper .webnav_wrapper .weblogo_wrapper {
@@ -99,6 +100,12 @@ body { margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; }
     color: #858585;
 }
 
+.hover {
+    border-bottom: 2px solid rgb(0, 48, 0);
+    transform: scale(1.03);
+    color: #858585;
+}
+
 .web_wrapper .webnav_wrapper .weblogin_wrapper {
     width: 15%;
     height: 100%;
@@ -137,6 +144,7 @@ body { margin: 0; padding: 0; font-family: Arial, Helvetica, sans-serif; }
     position: relative;
     bottom: 0;
     border: 1px solid #000;
+    background-color: #f7f7f7;
     /* background-color: #4D869C; */
 }
 
